realized run prod.

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -151,20 +151,20 @@
     "/build/layouts/reportana/index.min.css": "/build/layouts/reportana/index.min.css?id=2c3d75597e55f6f579d65839cc1705de",
     "/build/layouts/reportana/index.min.js": "/build/layouts/reportana/index.min.js?id=75513542a5ec2aff46932f3c21379a3c",
     "/build/layouts/reports/details.min.css": "/build/layouts/reports/details.min.css?id=842168624254584a96af4a5168448181",
-    "/build/layouts/reports/blockedbalance.min.css": "/build/layouts/reports/blockedbalance.min.css?id=5c744bd0d5822e71bf47e613c83682f7",
+    "/build/layouts/reports/blockedbalance.min.css": "/build/layouts/reports/blockedbalance.min.css?id=0e077a2dc27df9e17ed2628d2429b614",
     "/build/layouts/reports/blockedbalance.min.js": "/build/layouts/reports/blockedbalance.min.js?id=b498a860fbcc7a77b4de33fe8f8a4828",
-    "/build/layouts/reports/checkouts.min.css": "/build/layouts/reports/checkouts.min.css?id=aecfcc9a87cafe03f054b557a2ec0765",
+    "/build/layouts/reports/checkouts.min.css": "/build/layouts/reports/checkouts.min.css?id=0588164325c871b9602b132794d23a85",
     "/build/layouts/reports/checkouts.min.js": "/build/layouts/reports/checkouts.min.js?id=b7d8680dc2d08adc0dba1be6218ffd51",
-    "/build/layouts/reports/coupons.min.css": "/build/layouts/reports/coupons.min.css?id=5d45c4f25686a7b0ed7787948fc425fb",
+    "/build/layouts/reports/coupons.min.css": "/build/layouts/reports/coupons.min.css?id=1804379ed878a84390e1e27a1a5da4d3",
     "/build/layouts/reports/coupons.min.js": "/build/layouts/reports/coupons.min.js?id=0ec3960dbf8ba7ba067a03b9c6805686",
-    "/build/layouts/reports/index.min.css": "/build/layouts/reports/index.min.css?id=7d337e7bc305fdbfd2ca79eaa82a1dbd",
-    "/build/layouts/reports/index.min.js": "/build/layouts/reports/index.min.js?id=c836dcbd5d265a4d00b429a5d0271309",
+    "/build/layouts/reports/index.min.css": "/build/layouts/reports/index.min.css?id=4ff25689196bebd08b9a71c0c53595fd",
+    "/build/layouts/reports/index.min.js": "/build/layouts/reports/index.min.js?id=e2a783df8c0fe39fe61c0693d0d95e6b",
     "/build/layouts/reports/sales.min.js": "/build/layouts/reports/sales.min.js?id=44e2f2614de8bde24cbf794f3edf4f55",
     "/build/layouts/reports/finances.min.js": "/build/layouts/reports/finances.min.js?id=5a5e32cd3ce5728a568bf0f7051c70e0",
-    "/build/layouts/reports/marketing.min.js": "/build/layouts/reports/marketing.min.js?id=bff56ad496b07c2d8683ccfa87e027a4",
-    "/build/layouts/reports/pending.min.css": "/build/layouts/reports/pending.min.css?id=46ffdeabe38ed9c19fade3d73c511126",
+    "/build/layouts/reports/marketing.min.js": "/build/layouts/reports/marketing.min.js?id=f0c90d10d1eda044d35542b231edc0f0",
+    "/build/layouts/reports/pending.min.css": "/build/layouts/reports/pending.min.css?id=67f7ce8d6bc0242ade31e793920999bf",
     "/build/layouts/reports/pending.min.js": "/build/layouts/reports/pending.min.js?id=3fde3d86b6c99a229ae09e4ee6b67d94",
-    "/build/layouts/reports/projections.min.css": "/build/layouts/reports/projections.min.css?id=aecfcc9a87cafe03f054b557a2ec0765",
+    "/build/layouts/reports/projections.min.css": "/build/layouts/reports/projections.min.css?id=0588164325c871b9602b132794d23a85",
     "/build/layouts/reports/projections.min.js": "/build/layouts/reports/projections.min.js?id=d6d478b82d0ff696e322079be34056ee",
     "/build/layouts/sales/details.min.css": "/build/layouts/sales/details.min.css?id=842168624254584a96af4a5168448181",
     "/build/layouts/sales/details.min.js": "/build/layouts/sales/details.min.js?id=0b9151bba2557a1cb82edbc1e3d1a509",
@@ -515,6 +515,7 @@
     "/build/global/img/reports/big-graph.svg": "/build/global/img/reports/big-graph.svg?id=77eb07eb49d2d12c0478ec8cfee52f18",
     "/build/global/img/reports/blokedbalance.png": "/build/global/img/reports/blokedbalance.png?id=f071ddceb1c2edbc3bc9aaceeb906860",
     "/build/global/img/reports/cardPix.svg": "/build/global/img/reports/cardPix.svg?id=2275217c27c1f4ef674d60b9cd0f8de3",
+    "/build/global/img/reports/cardPix.svg:Zone.Identifier": "/build/global/img/reports/cardPix.svg:Zone.Identifier?id=7a8216696e0b2429e8077b9ee3420b29",
     "/build/global/img/reports/cash.png": "/build/global/img/reports/cash.png?id=c167b21cdbe99cdf5a6b654c2c008c03",
     "/build/global/img/reports/close-circle.svg": "/build/global/img/reports/close-circle.svg?id=8b89d2ee05b206b12320fa5d70027ab4",
     "/build/global/img/reports/empty-cart.svg": "/build/global/img/reports/empty-cart.svg?id=9a969a18a729a24f028a494aaae5a0d1",
@@ -536,7 +537,9 @@
     "/build/global/img/reports/ico-cupons.png": "/build/global/img/reports/ico-cupons.png?id=788ce1171fbbdb5f363562e00c006a6f",
     "/build/global/img/reports/ico-desktop.svg": "/build/global/img/reports/ico-desktop.svg?id=5c411e1c8f2a4786fe52d9587685aef7",
     "/build/global/img/reports/ico-know-more.png": "/build/global/img/reports/ico-know-more.png?id=938b4208a604a7b3185c4863e71d10b2",
+    "/build/global/img/reports/ico-know-more.png:Zone.Identifier": "/build/global/img/reports/ico-know-more.png:Zone.Identifier?id=7a8216696e0b2429e8077b9ee3420b29",
     "/build/global/img/reports/ico-know-more.svg": "/build/global/img/reports/ico-know-more.svg?id=a491ddb1fd011779aadcd33668ca0eb9",
+    "/build/global/img/reports/ico-know-more.svg:Zone.Identifier": "/build/global/img/reports/ico-know-more.svg:Zone.Identifier?id=7a8216696e0b2429e8077b9ee3420b29",
     "/build/global/img/reports/ico-linux.svg": "/build/global/img/reports/ico-linux.svg?id=7859c860030b13e17fcfd466623270e7",
     "/build/global/img/reports/ico-mkt.png": "/build/global/img/reports/ico-mkt.png?id=503947f2497ddd7eed24e38fe55c2474",
     "/build/global/img/reports/ico-mkt.svg": "/build/global/img/reports/ico-mkt.svg?id=7101aa2d4574ad1b127f596e7093c129",
@@ -565,6 +568,7 @@
     "/build/global/img/reports/no-products.svg": "/build/global/img/reports/no-products.svg?id=704a2e8d32a6816ba2052852adadf87f",
     "/build/global/img/reports/pending.png": "/build/global/img/reports/pending.png?id=19e47d19204b498a70110803ec785dc5",
     "/build/global/img/reports/txt-know-more.svg": "/build/global/img/reports/txt-know-more.svg?id=318481001702987908c664d2e7a77e2c",
+    "/build/global/img/reports/txt-know-more.svg:Zone.Identifier": "/build/global/img/reports/txt-know-more.svg:Zone.Identifier?id=7a8216696e0b2429e8077b9ee3420b29",
     "/build/global/img/reports/variation-arrow.svg": "/build/global/img/reports/variation-arrow.svg?id=87383b2395510d0c146a7eb8707830c4",
     "/build/global/img/svg/Arrow2.svg": "/build/global/img/svg/Arrow2.svg?id=507891fb4cb79e7f299117ae3ee7e639",
     "/build/global/img/svg/afiliados-b.svg": "/build/global/img/svg/afiliados-b.svg?id=94fb1ee3e02daf88d72d6a60ad3aa297",
