add product modal, create and edit product changes

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -580,6 +580,8 @@
     "/build/global/img/svg/moeda.svg": "/build/global/img/svg/moeda.svg?id=80467fbdbfd3a4d086e3615a01a9a8ed",
     "/build/global/img/svg/money-box.svg": "/build/global/img/svg/money-box.svg?id=ae7405b7176ba914c46eb02459edd14c",
     "/build/global/img/svg/money.svg": "/build/global/img/svg/money.svg?id=11c976a2b66aa4935e1f42026159ae61",
+    "/build/global/img/svg/new-box.svg": "/build/global/img/svg/new-box.svg?id=50c85df8240fd60f67ca71aad111ee8f",
+    "/build/global/img/svg/new-phone.svg": "/build/global/img/svg/new-phone.svg?id=7a8c763686f038e0ca20659e7cf33b6c",
     "/build/global/img/svg/notificacao.svg": "/build/global/img/svg/notificacao.svg?id=917a20be316d1a52e8f608408b51f906",
     "/build/global/img/svg/phone.svg": "/build/global/img/svg/phone.svg?id=3346856a917e2deecaa24b630b46fefa",
     "/build/global/img/svg/power_settings_new.svg": "/build/global/img/svg/power_settings_new.svg?id=f4d81051cc2c20f1f9a9129a163f8867",
