--- a/composer.json
+++ b/composer.json
@@ -8,64 +8,62 @@
   "license": "MIT",
   "type": "project",
   "require": {
-    "php": "^7.4",
+    "php": "^8.1",
     "ext-json": "*",
-    "arcanedev/log-viewer": "8.*",
+    "arcanedev/log-viewer": "9.0.0",
     "automattic/woocommerce": "^3.0",
-    "barryvdh/laravel-cors": "2.0.0",
-    "barryvdh/laravel-dompdf": "^0.9.0",
-    "cloudflare/sdk": "^1.1.6",
-    "doctrine/dbal": "^2.10",
-    "fakerphp/faker": "^1.14",
+    "barryvdh/laravel-cors": "3.0.0",
+    "barryvdh/laravel-dompdf": "^2.0.0",
+    "cloudflare/sdk": "1.3.0",
+    "doctrine/dbal": "3.4.2",
+    "fakerphp/faker": "^1.20",
     "fideloper/proxy": "^4.0",
     "google/apiclient": "^2.10",
-    "guzzlehttp/guzzle": "^6.2.2",
-    "guzzlehttp/psr7": "1.8.2",
+    "guzzlehttp/guzzle": "^7.4.5",
+    "guzzlehttp/psr7": "2.4.0",
     "intervention/image": "^2.4",
-    "jenssegers/agent": "^2.6",
+    "jenssegers/agent": "2.6.3",
     "laracasts/flash": "^3.0",
     "laracasts/presenter": "^0.2.1",
     "laracasts/utilities": "3.*",
-    "laravel/framework": "^8.0",
+    "laravel/framework": "^9.0",
     "laravel/helpers": "^1.2",
-    "laravel/horizon": "5.*",
-    "laravel/legacy-factories": "^1.1",
-    "laravel/passport": "10.1.3",
+    "laravel/horizon": "5.9.9",
+    "laravel/legacy-factories": "^1.3",
+    "laravel/passport": "10.4.1",
     "laravel/tinker": "^2.0",
-    "laravel/ui": "^3.0",
+    "laravel/ui": "3.4.6",
     "laravelcollective/html": "6.*",
     "lcobucci/jwt": "4.1.4",
-    "league/flysystem": "^1.0",
-    "league/flysystem-aws-s3-v3": "1.0.29",
+    "league/flysystem": "3.2.1",
+    "league/flysystem-aws-s3-v3": "3.1.1",
     "maatwebsite/excel": "^3.1",
     "nwidart/laravel-modules": "^8.0",
     "paquettg/php-html-parser": "^2.0",
     "predis/predis": "^1.1",
-    "pusher/pusher-php-server": "3.3.1",
+    "pusher/pusher-php-server": "7.0.2",
     "qcod/laravel-settings": "1.*",
     "sendgrid/sendgrid": "~7",
-    "sentry/sentry-laravel": "2.5.3",
-    "slince/shopify-api-php": "^2.5.1",
-    "socialiteproviders/shopify": "^1.0",
-    "spatie/laravel-activitylog": "^3.9",
-    "spatie/laravel-permission": "4.0.1",
-    "spatie/laravel-schedule-monitor": "^2.4",
+    "sentry/sentry-laravel": "2.13.0",
+    "slince/shopify-api-php": "3.1.0",
+    "spatie/laravel-activitylog": "4.5.3",
+    "spatie/laravel-permission": "5.5.5",
+    "spatie/laravel-schedule-monitor": "3.0.3",
     "torann/geoip": "^1.0",
-    "vinkla/hashids": "9.*"
+    "vinkla/hashids": "10.0.1"
   },
   "require-dev": {
     "ext-curl": "*",
     "barryvdh/laravel-debugbar": "^3.2",
     "barryvdh/laravel-ide-helper": "^2.8.2",
     "beyondcode/laravel-query-detector": "^1.4",
-    "facade/ignition": "^2.3.6",
+    "spatie/laravel-ignition": "^1.0",
     "filp/whoops": "~2.0",
     "krlove/eloquent-model-generator": "dev-master",
     "mockery/mockery": "^1.3.1",
-    "nunomaduro/collision": "^5.0",
+    "nunomaduro/collision": "^6.0",
     "phpunit/phpunit": "^9.0",
     "shuchkin/simplexlsx": "^0.8.13",
-    "supliu/laravel-query-monitor": "^1.0",
     "symfony/thanks": "^1.0"
   },
   "autoload": {
