--- a/composer.json
+++ b/composer.json
@@ -48,6 +48,7 @@
     "sentry/sentry-laravel": "2.13.0",
     "slince/shopify-api-php": "3.1.0",
     "spatie/laravel-activitylog": "4.5.3",
+    "spatie/laravel-health": "^1.14",
     "spatie/laravel-permission": "5.5.5",
     "spatie/laravel-schedule-monitor": "3.0.3",
     "torann/geoip": "^1.0",
