--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -6,8 +6,8 @@
     "/build/layouts/affiliates/index.min.js": "/build/layouts/affiliates/index.min.js?id=a3101619e75d68569ba6d4d99644e92b",
     "/build/layouts/affiliates/projectaffiliates.min.css": "/build/layouts/affiliates/projectaffiliates.min.css?id=56db8c089b19b32e0a7f0a75d0745199",
     "/build/layouts/affiliates/projectaffiliates.min.js": "/build/layouts/affiliates/projectaffiliates.min.js?id=bcb84f49d68db81167912903b9b34cfa",
-    "/build/layouts/affiliates/master.min.css": "/build/layouts/affiliates/master.min.css?id=64311e0a494cf1778c1e17925db1d1f5",
-    "/build/layouts/affiliates/master.min.js": "/build/layouts/affiliates/master.min.js?id=3baa57406277bd877299b94d7dff5144",
+    "/build/layouts/affiliates/master.min.css": "/build/layouts/affiliates/master.min.css?id=4cd90e58b3cfe3170c2c81fe25c72323",
+    "/build/layouts/affiliates/master.min.js": "/build/layouts/affiliates/master.min.js?id=ed7363fe0ee017b6791af9bd014c674c",
     "/build/layouts/affiliates/master2.min.js": "/build/layouts/affiliates/master2.min.js?id=888cc773bb281a8e4d0f0172121a3dea",
     "/build/layouts/affiliates/border-anim-h.gif": "/build/layouts/affiliates/border-anim-h.gif?id=288586cd1783fb968e1ed69e031c077b",
     "/build/layouts/affiliates/border-anim-v.gif": "/build/layouts/affiliates/border-anim-v.gif?id=f0de8166e020b04f4c9e5062a5f29974",
@@ -209,8 +209,8 @@
     "/build/layouts/master/sirius-font.ttf": "/build/layouts/master/sirius-font.ttf?id=5dfa5a07c31443df7fa2c29bac2d0a78",
     "/build/layouts/master/sirius-font.woff": "/build/layouts/master/sirius-font.woff?id=136bf0fe67cce4a27966d24b548d7323",
     "/build/layouts/master/sirius-font.woff2": "/build/layouts/master/sirius-font.woff2?id=5a2a00359ce017c2fddd3ac992fa2b64",
-    "/build/layouts/master/master.min.css": "/build/layouts/master/master.min.css?id=2e7125b80704938acf0a83c108af4a03",
-    "/build/layouts/master/plugins.min.js": "/build/layouts/master/plugins.min.js?id=40f8c27178e99c772c26fc3adc9ebd26",
+    "/build/layouts/master/master.min.css": "/build/layouts/master/master.min.css?id=7dc996a474af143dfa79b1b87fa25322",
+    "/build/layouts/master/plugins.min.js": "/build/layouts/master/plugins.min.js?id=cf71708867cedbd3304ede1b79e29683",
     "/build/layouts/master/production.min.js": "/build/layouts/master/production.min.js?id=33a0222bf06c2e47d5a94c8c32e5140a",
     "/build/layouts/master/master.min.js": "/build/layouts/master/master.min.js?id=888cc773bb281a8e4d0f0172121a3dea",
     "/build/layouts/master/sentry-bundle.min.js": "/build/layouts/master/sentry-bundle.min.js?id=5d4a6a8523016db604c17e8aa07e60e3",
@@ -251,6 +251,8 @@
     "/build/global/css/font/GilroyLight.woff": "/build/global/css/font/GilroyLight.woff?id=56ee867789a4441967491844915ac521",
     "/build/global/css/font/GilroyRegular.woff": "/build/global/css/font/GilroyRegular.woff?id=de9a41f57672ed8a65b4c71c127226c7",
     "/build/global/img/404.svg": "/build/global/img/404.svg?id=65c1c0c4e6ebd79a387fd21fb35a118e",
+    "/build/global/img/Shape.png:Zone.Identifier": "/build/global/img/Shape.png:Zone.Identifier?id=dce5191790621b5e424478ca69c47f55",
+    "/build/global/img/Vector.png:Zone.Identifier": "/build/global/img/Vector.png:Zone.Identifier?id=dce5191790621b5e424478ca69c47f55",
     "/build/global/img/active_campaign.png": "/build/global/img/active_campaign.png?id=0a0d49952f77e2f5f043c37a4a1bc244",
     "/build/global/img/afiliados.svg": "/build/global/img/afiliados.svg?id=c54ec1e8ab250ffff160058ae499684e",
     "/build/global/img/alert-demo-left.png": "/build/global/img/alert-demo-left.png?id=041d04e85cb98cc647cd974af8403e1e",
