--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -251,6 +251,8 @@
     "/build/global/css/font/GilroyLight.woff": "/build/global/css/font/GilroyLight.woff?id=56ee867789a4441967491844915ac521",
     "/build/global/css/font/GilroyRegular.woff": "/build/global/css/font/GilroyRegular.woff?id=de9a41f57672ed8a65b4c71c127226c7",
     "/build/global/img/404.svg": "/build/global/img/404.svg?id=65c1c0c4e6ebd79a387fd21fb35a118e",
+    "/build/global/img/Shape.png:Zone.Identifier": "/build/global/img/Shape.png:Zone.Identifier?id=dce5191790621b5e424478ca69c47f55",
+    "/build/global/img/Vector.png:Zone.Identifier": "/build/global/img/Vector.png:Zone.Identifier?id=dce5191790621b5e424478ca69c47f55",
     "/build/global/img/active_campaign.png": "/build/global/img/active_campaign.png?id=0a0d49952f77e2f5f043c37a4a1bc244",
     "/build/global/img/afiliados.svg": "/build/global/img/afiliados.svg?id=c54ec1e8ab250ffff160058ae499684e",
     "/build/global/img/alert-demo-left.png": "/build/global/img/alert-demo-left.png?id=041d04e85cb98cc647cd974af8403e1e",
