--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
         "vue": "^2.5.7"
     },
     "dependencies": {
-        "placeholder-loading": "^0.5.0"
+        "@prettier/plugin-php": "^0.19.1",
+        "@shufo/prettier-plugin-blade": "^1.5.7",
+        "placeholder-loading": "^0.5.0",
+        "prettier": "^2.7.1"
     }
 }
