--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -6,7 +6,7 @@
     "/build/layouts/affiliates/index.min.js": "/build/layouts/affiliates/index.min.js?id=a3101619e75d68569ba6d4d99644e92b",
     "/build/layouts/affiliates/projectaffiliates.min.css": "/build/layouts/affiliates/projectaffiliates.min.css?id=56db8c089b19b32e0a7f0a75d0745199",
     "/build/layouts/affiliates/projectaffiliates.min.js": "/build/layouts/affiliates/projectaffiliates.min.js?id=bcb84f49d68db81167912903b9b34cfa",
-    "/build/layouts/affiliates/master.min.css": "/build/layouts/affiliates/master.min.css?id=8b1c4e4b67ba2c380d2d771e570af7cd",
+    "/build/layouts/affiliates/master.min.css": "/build/layouts/affiliates/master.min.css?id=aa65af20765c71289ea818ac3d35b443",
     "/build/layouts/affiliates/master.min.js": "/build/layouts/affiliates/master.min.js?id=582f015e9eeeba19fe07ebf4284c3b56",
     "/build/layouts/affiliates/master2.min.js": "/build/layouts/affiliates/master2.min.js?id=888cc773bb281a8e4d0f0172121a3dea",
     "/build/layouts/affiliates/border-anim-h.gif": "/build/layouts/affiliates/border-anim-h.gif?id=288586cd1783fb968e1ed69e031c077b",
@@ -209,7 +209,9 @@
     "/build/layouts/master/sirius-font.ttf": "/build/layouts/master/sirius-font.ttf?id=5dfa5a07c31443df7fa2c29bac2d0a78",
     "/build/layouts/master/sirius-font.woff": "/build/layouts/master/sirius-font.woff?id=136bf0fe67cce4a27966d24b548d7323",
     "/build/layouts/master/sirius-font.woff2": "/build/layouts/master/sirius-font.woff2?id=5a2a00359ce017c2fddd3ac992fa2b64",
-    "/build/layouts/master/master.min.css": "/build/layouts/master/master.min.css?id=401e2e59ed4d7c6d69e433e95f99f3a7",
+    "/build/layouts/auth/auth.min.css": "/build/layouts/auth/auth.min.css?id=5623d15fe532710255ef9c0454f30c17",
+    "/build/layouts/auth/auth.min.js": "/build/layouts/auth/auth.min.js?id=4483e473d873568fea460e44902d2010",
+    "/build/layouts/master/master.min.css": "/build/layouts/master/master.min.css?id=92ab7cb14db5ca0d0d99a76bbc5329ac",
     "/build/layouts/master/plugins.min.js": "/build/layouts/master/plugins.min.js?id=76cdb88fa230fd481b0e6fa40432d5f0",
     "/build/layouts/master/production.min.js": "/build/layouts/master/production.min.js?id=33a0222bf06c2e47d5a94c8c32e5140a",
     "/build/layouts/master/master.min.js": "/build/layouts/master/master.min.js?id=888cc773bb281a8e4d0f0172121a3dea",
@@ -360,6 +362,7 @@
     "/build/global/img/mstile-150x150.png": "/build/global/img/mstile-150x150.png?id=81f1ef110cfaf0b0046c9f9ef3b7caf9",
     "/build/global/img/notazz.png": "/build/global/img/notazz.png?id=083698dede9bab5c8ad8aecc83d65c17",
     "/build/global/img/notificacoes.svg": "/build/global/img/notificacoes.svg?id=b08926837fa6c4affc39f09f59fab7e8",
+    "/build/global/img/notificacoesinteligentes.png": "/build/global/img/notificacoesinteligentes.png?id=975596fd2ad434779e7f87aacfae5ca4",
     "/build/global/img/onboarding-account-health.png": "/build/global/img/onboarding-account-health.png?id=e5fd3b8849cd1fef5070284cb5b27458",
     "/build/global/img/onboarding-presentation.png": "/build/global/img/onboarding-presentation.png?id=c0428c6ef526ed44808bd7199972cc94",
     "/build/global/img/order-bump.svg": "/build/global/img/order-bump.svg?id=1d36e3b64cea82eac495a6258d9f56e5",
