--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -6,7 +6,7 @@
     "/build/layouts/affiliates/index.min.js": "/build/layouts/affiliates/index.min.js?id=a3101619e75d68569ba6d4d99644e92b",
     "/build/layouts/affiliates/projectaffiliates.min.css": "/build/layouts/affiliates/projectaffiliates.min.css?id=56db8c089b19b32e0a7f0a75d0745199",
     "/build/layouts/affiliates/projectaffiliates.min.js": "/build/layouts/affiliates/projectaffiliates.min.js?id=bcb84f49d68db81167912903b9b34cfa",
-    "/build/layouts/affiliates/master.min.css": "/build/layouts/affiliates/master.min.css?id=b40aefb56a3b85c649bf67dd466f79e0",
+    "/build/layouts/affiliates/master.min.css": "/build/layouts/affiliates/master.min.css?id=aa65af20765c71289ea818ac3d35b443",
     "/build/layouts/affiliates/master.min.js": "/build/layouts/affiliates/master.min.js?id=3488320dc3c1c90af8cdced23b8ab9af",
     "/build/layouts/affiliates/master2.min.js": "/build/layouts/affiliates/master2.min.js?id=888cc773bb281a8e4d0f0172121a3dea",
     "/build/layouts/affiliates/border-anim-h.gif": "/build/layouts/affiliates/border-anim-h.gif?id=288586cd1783fb968e1ed69e031c077b",
@@ -107,10 +107,10 @@
     "/build/layouts/melhorenvio/img/step-4a.jpg": "/build/layouts/melhorenvio/img/step-4a.jpg?id=386554b24d8f9550fd2c5a3d2ee04e03",
     "/build/layouts/melhorenvio/img/step-4b.jpg": "/build/layouts/melhorenvio/img/step-4b.jpg?id=844be64c5d41c49f858ec9da05b4991b",
     "/build/layouts/notazz/details.min.js": "/build/layouts/notazz/details.min.js?id=693f2268778d48a488a36d11e2ed3e26",
-    "/build/layouts/notazz/include.min.css": "/build/layouts/notazz/include.min.css?id=af8878ab32abe2c0abf3af54f070552a",
-    "/build/layouts/notazz/index.min.css": "/build/layouts/notazz/index.min.css?id=2d349230dc373142f64bbf18f63a52ed",
+    "/build/layouts/notazz/include.min.css": "/build/layouts/notazz/include.min.css?id=c4639f3f7409a95024bd359359013439",
+    "/build/layouts/notazz/index.min.css": "/build/layouts/notazz/index.min.css?id=61a70b4010b24aa8081f02d81ac9a7aa",
     "/build/layouts/notazz/index.min.js": "/build/layouts/notazz/index.min.js?id=0197998ab19ee53aef70bb67dd2b03d7",
-    "/build/layouts/notazz/show.min.css": "/build/layouts/notazz/show.min.css?id=ed6c74313772d794c86ea9d51e73f268",
+    "/build/layouts/notazz/show.min.css": "/build/layouts/notazz/show.min.css?id=8a828331505f6750f0fe7b296cea7ba7",
     "/build/layouts/notazz/show.min.js": "/build/layouts/notazz/show.min.js?id=74e2fdb89d20bba31e02c33655fff2ca",
     "/build/layouts/pixels/edit.min.css": "/build/layouts/pixels/edit.min.css?id=383c3f72abefd823d5db7af054f6989f",
     "/build/layouts/products/index.min.css": "/build/layouts/products/index.min.css?id=c669f4317071a9a4b4bb1e2473b1d8b2",
@@ -209,7 +209,9 @@
     "/build/layouts/master/sirius-font.ttf": "/build/layouts/master/sirius-font.ttf?id=5dfa5a07c31443df7fa2c29bac2d0a78",
     "/build/layouts/master/sirius-font.woff": "/build/layouts/master/sirius-font.woff?id=136bf0fe67cce4a27966d24b548d7323",
     "/build/layouts/master/sirius-font.woff2": "/build/layouts/master/sirius-font.woff2?id=5a2a00359ce017c2fddd3ac992fa2b64",
-    "/build/layouts/master/master.min.css": "/build/layouts/master/master.min.css?id=c7ccca45ee0e81f26bd6f89024237445",
+    "/build/layouts/auth/auth.min.css": "/build/layouts/auth/auth.min.css?id=5623d15fe532710255ef9c0454f30c17",
+    "/build/layouts/auth/auth.min.js": "/build/layouts/auth/auth.min.js?id=029515093aab7ad7cc3b3917367c0102",
+    "/build/layouts/master/master.min.css": "/build/layouts/master/master.min.css?id=92ab7cb14db5ca0d0d99a76bbc5329ac",
     "/build/layouts/master/plugins.min.js": "/build/layouts/master/plugins.min.js?id=a020902d1b079f38e1825755015218a1",
     "/build/layouts/master/production.min.js": "/build/layouts/master/production.min.js?id=33a0222bf06c2e47d5a94c8c32e5140a",
     "/build/layouts/master/master.min.js": "/build/layouts/master/master.min.js?id=888cc773bb281a8e4d0f0172121a3dea",
@@ -251,6 +253,8 @@
     "/build/global/css/font/GilroyLight.woff": "/build/global/css/font/GilroyLight.woff?id=56ee867789a4441967491844915ac521",
     "/build/global/css/font/GilroyRegular.woff": "/build/global/css/font/GilroyRegular.woff?id=de9a41f57672ed8a65b4c71c127226c7",
     "/build/global/img/404.svg": "/build/global/img/404.svg?id=65c1c0c4e6ebd79a387fd21fb35a118e",
+    "/build/global/img/Shape.png:Zone.Identifier": "/build/global/img/Shape.png:Zone.Identifier?id=dce5191790621b5e424478ca69c47f55",
+    "/build/global/img/Vector.png:Zone.Identifier": "/build/global/img/Vector.png:Zone.Identifier?id=dce5191790621b5e424478ca69c47f55",
     "/build/global/img/active_campaign.png": "/build/global/img/active_campaign.png?id=0a0d49952f77e2f5f043c37a4a1bc244",
     "/build/global/img/afiliados.svg": "/build/global/img/afiliados.svg?id=c54ec1e8ab250ffff160058ae499684e",
     "/build/global/img/alert-demo-left.png": "/build/global/img/alert-demo-left.png?id=041d04e85cb98cc647cd974af8403e1e",
