fix font size when total and comission are larger than box size

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -168,7 +168,7 @@
     "/build/layouts/sales/details.min.css": "/build/layouts/sales/details.min.css?id=37129ce5fb97bf8f0255e8ab8f1ae5dd",
     "/build/layouts/sales/details.min.js": "/build/layouts/sales/details.min.js?id=3d757c5b3b1f52b3edf53765700fea7c",
     "/build/layouts/sales/index.min.css": "/build/layouts/sales/index.min.css?id=fc0ea0c7db75285524d1f320855d3a67",
-    "/build/layouts/sales/index.min.js": "/build/layouts/sales/index.min.js?id=2e720c5b71ef13b010cda5c21399ccf2",
+    "/build/layouts/sales/index.min.js": "/build/layouts/sales/index.min.js?id=c5a2653a7a3fda2303af22993efe11af",
     "/build/layouts/salesblacklistantifraud/details.min.css": "/build/layouts/salesblacklistantifraud/details.min.css?id=37129ce5fb97bf8f0255e8ab8f1ae5dd",
     "/build/layouts/salesblacklistantifraud/index.min.css": "/build/layouts/salesblacklistantifraud/index.min.css?id=dfcf301a061717b18cadc5ba459c8922",
     "/build/layouts/salesblacklistantifraud/index.min.js": "/build/layouts/salesblacklistantifraud/index.min.js?id=47de1479b8e5f94449eb43a4af64210a",
@@ -254,6 +254,8 @@
     "/build/global/css/font/GilroyLight.woff": "/build/global/css/font/GilroyLight.woff?id=56ee867789a4441967491844915ac521",
     "/build/global/css/font/GilroyRegular.woff": "/build/global/css/font/GilroyRegular.woff?id=de9a41f57672ed8a65b4c71c127226c7",
     "/build/global/img/404.svg": "/build/global/img/404.svg?id=65c1c0c4e6ebd79a387fd21fb35a118e",
+    "/build/global/img/Shape.png:Zone.Identifier": "/build/global/img/Shape.png:Zone.Identifier?id=dce5191790621b5e424478ca69c47f55",
+    "/build/global/img/Vector.png:Zone.Identifier": "/build/global/img/Vector.png:Zone.Identifier?id=dce5191790621b5e424478ca69c47f55",
     "/build/global/img/active_campaign.png": "/build/global/img/active_campaign.png?id=0a0d49952f77e2f5f043c37a4a1bc244",
     "/build/global/img/afiliados.svg": "/build/global/img/afiliados.svg?id=c54ec1e8ab250ffff160058ae499684e",
     "/build/global/img/alert-demo-left.png": "/build/global/img/alert-demo-left.png?id=041d04e85cb98cc647cd974af8403e1e",
