--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -6,7 +6,7 @@
     "/build/layouts/affiliates/index.min.js": "/build/layouts/affiliates/index.min.js?id=a3101619e75d68569ba6d4d99644e92b",
     "/build/layouts/affiliates/projectaffiliates.min.css": "/build/layouts/affiliates/projectaffiliates.min.css?id=56db8c089b19b32e0a7f0a75d0745199",
     "/build/layouts/affiliates/projectaffiliates.min.js": "/build/layouts/affiliates/projectaffiliates.min.js?id=bcb84f49d68db81167912903b9b34cfa",
-    "/build/layouts/affiliates/master.min.css": "/build/layouts/affiliates/master.min.css?id=2d0bdd9b5db4a33b9426340dceda5664",
+    "/build/layouts/affiliates/master.min.css": "/build/layouts/affiliates/master.min.css?id=0d628786c0a7959c76504243ff7e2c50",
     "/build/layouts/affiliates/master.min.js": "/build/layouts/affiliates/master.min.js?id=b814377defdaabf6f8629b22aae0a4b5",
     "/build/layouts/affiliates/master2.min.js": "/build/layouts/affiliates/master2.min.js?id=888cc773bb281a8e4d0f0172121a3dea",
     "/build/layouts/affiliates/border-anim-h.gif": "/build/layouts/affiliates/border-anim-h.gif?id=288586cd1783fb968e1ed69e031c077b",
@@ -212,7 +212,7 @@
     "/build/layouts/master/sirius-font.woff2": "/build/layouts/master/sirius-font.woff2?id=5a2a00359ce017c2fddd3ac992fa2b64",
     "/build/layouts/auth/auth.min.css": "/build/layouts/auth/auth.min.css?id=5623d15fe532710255ef9c0454f30c17",
     "/build/layouts/auth/auth.min.js": "/build/layouts/auth/auth.min.js?id=c3725022e48de3c2e3925b88430572cc",
-    "/build/layouts/master/master.min.css": "/build/layouts/master/master.min.css?id=fc0ba31e9a6ae42672a01d743136eaf4",
+    "/build/layouts/master/master.min.css": "/build/layouts/master/master.min.css?id=45deb01ae9813eb30ec843e6ad964cc2",
     "/build/layouts/master/plugins.min.js": "/build/layouts/master/plugins.min.js?id=8767f6c22c0204a5d061f91909c52bf3",
     "/build/layouts/master/production.min.js": "/build/layouts/master/production.min.js?id=33a0222bf06c2e47d5a94c8c32e5140a",
     "/build/layouts/master/master.min.js": "/build/layouts/master/master.min.js?id=888cc773bb281a8e4d0f0172121a3dea",
@@ -254,6 +254,8 @@
     "/build/global/css/font/GilroyLight.woff": "/build/global/css/font/GilroyLight.woff?id=56ee867789a4441967491844915ac521",
     "/build/global/css/font/GilroyRegular.woff": "/build/global/css/font/GilroyRegular.woff?id=de9a41f57672ed8a65b4c71c127226c7",
     "/build/global/img/404.svg": "/build/global/img/404.svg?id=65c1c0c4e6ebd79a387fd21fb35a118e",
+    "/build/global/img/Shape.png:Zone.Identifier": "/build/global/img/Shape.png:Zone.Identifier?id=dce5191790621b5e424478ca69c47f55",
+    "/build/global/img/Vector.png:Zone.Identifier": "/build/global/img/Vector.png:Zone.Identifier?id=dce5191790621b5e424478ca69c47f55",
     "/build/global/img/active_campaign.png": "/build/global/img/active_campaign.png?id=0a0d49952f77e2f5f043c37a4a1bc244",
     "/build/global/img/afiliados.svg": "/build/global/img/afiliados.svg?id=c54ec1e8ab250ffff160058ae499684e",
     "/build/global/img/alert-demo-left.png": "/build/global/img/alert-demo-left.png?id=041d04e85cb98cc647cd974af8403e1e",
