--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -272,6 +272,7 @@
     "/build/global/img/adquirintes/cielo.svg": "/build/global/img/adquirintes/cielo.svg?id=d6f6f4d405fdd3278dfb10f19dfd7883",
     "/build/global/img/adquirintes/gerencianet.svg": "/build/global/img/adquirintes/gerencianet.svg?id=58b50213fca9a16023b6b226af1ff0be",
     "/build/global/img/adquirintes/getnet.svg": "/build/global/img/adquirintes/getnet.svg?id=13931c6b75809b126c2c6bc9c3b4e0f6",
+    "/build/global/img/adquirintes/vega-logo.svg": "/build/global/img/adquirintes/vega-logo.svg?id=7974668a6a24e9d364cc2c8dbe882879",
     "/build/global/img/afiliados.svg": "/build/global/img/afiliados.svg?id=c54ec1e8ab250ffff160058ae499684e",
     "/build/global/img/alert-demo-left.png": "/build/global/img/alert-demo-left.png?id=041d04e85cb98cc647cd974af8403e1e",
     "/build/global/img/alert-demo-rigth.png": "/build/global/img/alert-demo-rigth.png?id=dfd412faada72b5a5d133a4a5ded5cae",
@@ -338,12 +339,23 @@
     "/build/global/img/error.png": "/build/global/img/error.png?id=012c250e654e55eff4e6eb78e7135514",
     "/build/global/img/estorno-calendar.svg": "/build/global/img/estorno-calendar.svg?id=d62217963788317b7667dc213913328b",
     "/build/global/img/estorno-money.svg": "/build/global/img/estorno-money.svg?id=164f9cb25afbf0240668dff77677deee",
+    "/build/global/img/estorno-shape.svg": "/build/global/img/estorno-shape.svg?id=4db3d65c01f4a5de48a51a5ba3b0f1f9",
     "/build/global/img/extrato.svg": "/build/global/img/extrato.svg?id=849baf26258582fae1e5d6caafef4690",
     "/build/global/img/falta-pouco.png": "/build/global/img/falta-pouco.png?id=ae347131c2956e1dd9cd1cb17f61c22c",
     "/build/global/img/favicon-16x16.png": "/build/global/img/favicon-16x16.png?id=51154484e113f76d0953aa7a8a930681",
     "/build/global/img/favicon-32x32.png": "/build/global/img/favicon-32x32.png?id=afef70b21fe1cf8ee2ed87aaa0ff9a25",
     "/build/global/img/favicon.ico": "/build/global/img/favicon.ico?id=68cb06fb1e96ae979d2f7a0bd1750913",
     "/build/global/img/favicon.png": "/build/global/img/favicon.png?id=c5abd3f81a2c6ce4b42954fadbbc61e4",
+    "/build/global/img/gateway/asaas.svg": "/build/global/img/gateway/asaas.svg?id=3141f05835cac5b9714e8b8cc49fdebb",
+    "/build/global/img/gateway/cielo.svg": "/build/global/img/gateway/cielo.svg?id=d6f6f4d405fdd3278dfb10f19dfd7883",
+    "/build/global/img/gateway/gerencianet.svg": "/build/global/img/gateway/gerencianet.svg?id=58b50213fca9a16023b6b226af1ff0be",
+    "/build/global/img/gateway/getnet.svg": "/build/global/img/gateway/getnet.svg?id=13931c6b75809b126c2c6bc9c3b4e0f6",
+    "/build/global/img/gateways/asaas.svg": "/build/global/img/gateways/asaas.svg?id=3141f05835cac5b9714e8b8cc49fdebb",
+    "/build/global/img/gateways/cielo.svg": "/build/global/img/gateways/cielo.svg?id=d6f6f4d405fdd3278dfb10f19dfd7883",
+    "/build/global/img/gateways/gerencianet.svg": "/build/global/img/gateways/gerencianet.svg?id=58b50213fca9a16023b6b226af1ff0be",
+    "/build/global/img/gateways/getnet.svg": "/build/global/img/gateways/getnet.svg?id=13931c6b75809b126c2c6bc9c3b4e0f6",
+    "/build/global/img/gateways/vega-logo.svg": "/build/global/img/gateways/vega-logo.svg?id=7974668a6a24e9d364cc2c8dbe882879",
+    "/build/global/img/gateways/vega.svg": "/build/global/img/gateways/vega.svg?id=7974668a6a24e9d364cc2c8dbe882879",
     "/build/global/img/geral-1.svg": "/build/global/img/geral-1.svg?id=ce2e82a06a29c893b9515682d25ff01e",
     "/build/global/img/geral-2.svg": "/build/global/img/geral-2.svg?id=774c00bff2a27fd0015ed4ad8969132d",
     "/build/global/img/geral-3.svg": "/build/global/img/geral-3.svg?id=88aa7ca5c82f07665eaac5cc561f750a",
@@ -694,6 +706,7 @@
     "/build/global/img/upsell.svg": "/build/global/img/upsell.svg?id=a92a50ac1a1752c4d86c8fabcd36bcc3",
     "/build/global/img/user-default.png": "/build/global/img/user-default.png?id=bdeec73502f3a762aa4824c7b4cf91ac",
     "/build/global/img/user.jpg": "/build/global/img/user.jpg?id=09d5cb3a07e83c444aaaff84e71de7f0",
+    "/build/global/img/vega-logo.svg": "/build/global/img/vega-logo.svg?id=7974668a6a24e9d364cc2c8dbe882879",
     "/build/global/img/vendas.svg": "/build/global/img/vendas.svg?id=2e92d5396faba7be217c49fbc91d2562",
     "/build/global/img/visa.svg": "/build/global/img/visa.svg?id=0dd700399693a6d7a4a71650a0f17a2a",
     "/build/global/img/welcome-gradient.png": "/build/global/img/welcome-gradient.png?id=0265663a72c2c4d2f529db76626e1f30",
