--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -257,13 +257,6 @@
     "/build/global/img/Shape.png:Zone.Identifier": "/build/global/img/Shape.png:Zone.Identifier?id=dce5191790621b5e424478ca69c47f55",
     "/build/global/img/Vector.png:Zone.Identifier": "/build/global/img/Vector.png:Zone.Identifier?id=dce5191790621b5e424478ca69c47f55",
     "/build/global/img/active_campaign.png": "/build/global/img/active_campaign.png?id=0a0d49952f77e2f5f043c37a4a1bc244",
-    "/build/global/img/add-hover.svg": "/build/global/img/add-hover.svg?id=9849656e8c2abaccac2f75bc7461c1f0",
-    "/build/global/img/add.svg": "/build/global/img/add.svg?id=a4f25f7bc89c41253af8630198f15af6",
-    "/build/global/img/adquirintes/asaas.svg": "/build/global/img/adquirintes/asaas.svg?id=3141f05835cac5b9714e8b8cc49fdebb",
-    "/build/global/img/adquirintes/cielo.svg": "/build/global/img/adquirintes/cielo.svg?id=d6f6f4d405fdd3278dfb10f19dfd7883",
-    "/build/global/img/adquirintes/gerencianet.svg": "/build/global/img/adquirintes/gerencianet.svg?id=58b50213fca9a16023b6b226af1ff0be",
-    "/build/global/img/adquirintes/getnet.svg": "/build/global/img/adquirintes/getnet.svg?id=13931c6b75809b126c2c6bc9c3b4e0f6",
-    "/build/global/img/adquirintes/vega-logo.svg": "/build/global/img/adquirintes/vega-logo.svg?id=7974668a6a24e9d364cc2c8dbe882879",
     "/build/global/img/afiliados.svg": "/build/global/img/afiliados.svg?id=c54ec1e8ab250ffff160058ae499684e",
     "/build/global/img/alert-demo-left.png": "/build/global/img/alert-demo-left.png?id=041d04e85cb98cc647cd974af8403e1e",
     "/build/global/img/alert-demo-rigth.png": "/build/global/img/alert-demo-rigth.png?id=dfd412faada72b5a5d133a4a5ded5cae",
@@ -319,16 +312,6 @@
     "/build/global/img/favicon-32x32.png": "/build/global/img/favicon-32x32.png?id=afef70b21fe1cf8ee2ed87aaa0ff9a25",
     "/build/global/img/favicon.ico": "/build/global/img/favicon.ico?id=68cb06fb1e96ae979d2f7a0bd1750913",
     "/build/global/img/favicon.png": "/build/global/img/favicon.png?id=c5abd3f81a2c6ce4b42954fadbbc61e4",
-    "/build/global/img/gateway/asaas.svg": "/build/global/img/gateway/asaas.svg?id=3141f05835cac5b9714e8b8cc49fdebb",
-    "/build/global/img/gateway/cielo.svg": "/build/global/img/gateway/cielo.svg?id=d6f6f4d405fdd3278dfb10f19dfd7883",
-    "/build/global/img/gateway/gerencianet.svg": "/build/global/img/gateway/gerencianet.svg?id=58b50213fca9a16023b6b226af1ff0be",
-    "/build/global/img/gateway/getnet.svg": "/build/global/img/gateway/getnet.svg?id=13931c6b75809b126c2c6bc9c3b4e0f6",
-    "/build/global/img/gateways/asaas.svg": "/build/global/img/gateways/asaas.svg?id=3141f05835cac5b9714e8b8cc49fdebb",
-    "/build/global/img/gateways/cielo.svg": "/build/global/img/gateways/cielo.svg?id=d6f6f4d405fdd3278dfb10f19dfd7883",
-    "/build/global/img/gateways/gerencianet.svg": "/build/global/img/gateways/gerencianet.svg?id=58b50213fca9a16023b6b226af1ff0be",
-    "/build/global/img/gateways/getnet.svg": "/build/global/img/gateways/getnet.svg?id=13931c6b75809b126c2c6bc9c3b4e0f6",
-    "/build/global/img/gateways/vega-logo.svg": "/build/global/img/gateways/vega-logo.svg?id=7974668a6a24e9d364cc2c8dbe882879",
-    "/build/global/img/gateways/vega.svg": "/build/global/img/gateways/vega.svg?id=7974668a6a24e9d364cc2c8dbe882879",
     "/build/global/img/geral-1.svg": "/build/global/img/geral-1.svg?id=ce2e82a06a29c893b9515682d25ff01e",
     "/build/global/img/geral-2.svg": "/build/global/img/geral-2.svg?id=774c00bff2a27fd0015ed4ad8969132d",
     "/build/global/img/geral-3.svg": "/build/global/img/geral-3.svg?id=88aa7ca5c82f07665eaac5cc561f750a",
@@ -420,6 +403,7 @@
     "/build/global/img/upsell.svg": "/build/global/img/upsell.svg?id=a92a50ac1a1752c4d86c8fabcd36bcc3",
     "/build/global/img/user-default.png": "/build/global/img/user-default.png?id=bdeec73502f3a762aa4824c7b4cf91ac",
     "/build/global/img/user.jpg": "/build/global/img/user.jpg?id=09d5cb3a07e83c444aaaff84e71de7f0",
+    "/build/global/img/vega-logo.svg": "/build/global/img/vega-logo.svg?id=7974668a6a24e9d364cc2c8dbe882879",
     "/build/global/img/vendas.svg": "/build/global/img/vendas.svg?id=2e92d5396faba7be217c49fbc91d2562",
     "/build/global/img/visa.svg": "/build/global/img/visa.svg?id=0dd700399693a6d7a4a71650a0f17a2a",
     "/build/global/img/welcome-gradient.png": "/build/global/img/welcome-gradient.png?id=0265663a72c2c4d2f529db76626e1f30",
@@ -428,10 +412,11 @@
     "/build/global/img/whatsapp2.png": "/build/global/img/whatsapp2.png?id=8cc7040f5d90941f1ae6e6f3eef3015d",
     "/build/global/img/whatsapplogo.png": "/build/global/img/whatsapplogo.png?id=fccae3f76212584c80ce168931baec15",
     "/build/global/img/woocom.jpg": "/build/global/img/woocom.jpg?id=9c3c98aaf60b6f44522733ef248d48f6",
-    "/build/global/img/adquirintes/asaas.svg": "/build/global/img/adquirintes/asaas.svg?id=3141f05835cac5b9714e8b8cc49fdebb",
-    "/build/global/img/adquirintes/cielo.svg": "/build/global/img/adquirintes/cielo.svg?id=d6f6f4d405fdd3278dfb10f19dfd7883",
-    "/build/global/img/adquirintes/gerencianet.svg": "/build/global/img/adquirintes/gerencianet.svg?id=58b50213fca9a16023b6b226af1ff0be",
-    "/build/global/img/adquirintes/getnet.svg": "/build/global/img/adquirintes/getnet.svg?id=13931c6b75809b126c2c6bc9c3b4e0f6",
+    "/build/global/img/gateways/asaas.svg": "/build/global/img/gateways/asaas.svg?id=3141f05835cac5b9714e8b8cc49fdebb",
+    "/build/global/img/gateways/cielo.svg": "/build/global/img/gateways/cielo.svg?id=d6f6f4d405fdd3278dfb10f19dfd7883",
+    "/build/global/img/gateways/gerencianet.svg": "/build/global/img/gateways/gerencianet.svg?id=58b50213fca9a16023b6b226af1ff0be",
+    "/build/global/img/gateways/getnet.svg": "/build/global/img/gateways/getnet.svg?id=13931c6b75809b126c2c6bc9c3b4e0f6",
+    "/build/global/img/gateways/vega.svg": "/build/global/img/gateways/vega.svg?id=7974668a6a24e9d364cc2c8dbe882879",
     "/build/global/img/cartoes/amex.png": "/build/global/img/cartoes/amex.png?id=a6b08bb92350faf54cb9edcf6dc11f9f",
     "/build/global/img/cartoes/aura.png": "/build/global/img/cartoes/aura.png?id=e23e59c99f576c0b8296edffbca6a278",
     "/build/global/img/cartoes/boleto.png": "/build/global/img/cartoes/boleto.png?id=9d7f1cfc12b635146250c8672e7604b0",
@@ -707,25 +692,5 @@
     "/build/global/img/svg/vitrine.png": "/build/global/img/svg/vitrine.png?id=599899880b9b4167a5e08cbefcfdc820",
     "/build/global/img/svg/vitrine.svg": "/build/global/img/svg/vitrine.svg?id=7c8778ecc27cd7bcdcd8eecda1844f4c",
     "/build/global/img/svg/whatsapp.svg": "/build/global/img/svg/whatsapp.svg?id=97764c009265fbf698c85400a55016eb",
-    "/build/global/img/svg/woocommerce-logo.svg": "/build/global/img/svg/woocommerce-logo.svg?id=f140b51a10ab8aa4eca1cf39a0750a04",
-    "/build/global/img/tick.png": "/build/global/img/tick.png?id=98dcc2c7e734f3846338683b30da5a6e",
-    "/build/global/img/tick.svg": "/build/global/img/tick.svg?id=46da467db0a302e169e61a1f5c3608a3",
-    "/build/global/img/tickets.svg": "/build/global/img/tickets.svg?id=dfb4deae64a130872cd54ed87c1609b8",
-    "/build/global/img/tiktok.jpg": "/build/global/img/tiktok.jpg?id=83b914279bac9e4bb50d2d8184bf21d8",
-    "/build/global/img/timeline-chargeback.svg": "/build/global/img/timeline-chargeback.svg?id=f901f726f1ca245f1a2ac2e5c12e2125",
-    "/build/global/img/tools.svg": "/build/global/img/tools.svg?id=f39ca5e7f9bb90f895b32e8f2729de7a",
-    "/build/global/img/unicodrop.jpeg": "/build/global/img/unicodrop.jpeg?id=da31562948e328d1bd27a039d474b5a7",
-    "/build/global/img/unicodrop.png": "/build/global/img/unicodrop.png?id=cf80ed149a624b9c1b2a503ecfa6ca3d",
-    "/build/global/img/upsell.svg": "/build/global/img/upsell.svg?id=a92a50ac1a1752c4d86c8fabcd36bcc3",
-    "/build/global/img/user-default.png": "/build/global/img/user-default.png?id=bdeec73502f3a762aa4824c7b4cf91ac",
-    "/build/global/img/user.jpg": "/build/global/img/user.jpg?id=09d5cb3a07e83c444aaaff84e71de7f0",
-    "/build/global/img/vega-logo.svg": "/build/global/img/vega-logo.svg?id=7974668a6a24e9d364cc2c8dbe882879",
-    "/build/global/img/vendas.svg": "/build/global/img/vendas.svg?id=2e92d5396faba7be217c49fbc91d2562",
-    "/build/global/img/visa.svg": "/build/global/img/visa.svg?id=0dd700399693a6d7a4a71650a0f17a2a",
-    "/build/global/img/welcome-gradient.png": "/build/global/img/welcome-gradient.png?id=0265663a72c2c4d2f529db76626e1f30",
-    "/build/global/img/welcome-gradient2.png": "/build/global/img/welcome-gradient2.png?id=e3167b6c00d111c3799516348e353101",
-    "/build/global/img/welcome-white.png": "/build/global/img/welcome-white.png?id=fb1146ec933f9f2b7d4e770acd99e40f",
-    "/build/global/img/whatsapp2.png": "/build/global/img/whatsapp2.png?id=8cc7040f5d90941f1ae6e6f3eef3015d",
-    "/build/global/img/whatsapplogo.png": "/build/global/img/whatsapplogo.png?id=fccae3f76212584c80ce168931baec15",
-    "/build/global/img/woocom.jpg": "/build/global/img/woocom.jpg?id=9c3c98aaf60b6f44522733ef248d48f6"
+    "/build/global/img/svg/woocommerce-logo.svg": "/build/global/img/svg/woocommerce-logo.svg?id=f140b51a10ab8aa4eca1cf39a0750a04"
 }
