--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -6,7 +6,7 @@
     "/build/layouts/affiliates/index.min.js": "/build/layouts/affiliates/index.min.js?id=a3101619e75d68569ba6d4d99644e92b",
     "/build/layouts/affiliates/projectaffiliates.min.css": "/build/layouts/affiliates/projectaffiliates.min.css?id=144f6baeb8a3383dc61b389d458992eb",
     "/build/layouts/affiliates/projectaffiliates.min.js": "/build/layouts/affiliates/projectaffiliates.min.js?id=9a4c936b66f8208a9f5dd45376943b31",
-    "/build/layouts/affiliates/master.min.css": "/build/layouts/affiliates/master.min.css?id=0bd0921ec96f2a9b4d6fafb7f0a8926c",
+    "/build/layouts/affiliates/master.min.css": "/build/layouts/affiliates/master.min.css?id=93ae737dfc4c1f44deda0ede66b0016a",
     "/build/layouts/affiliates/master.min.js": "/build/layouts/affiliates/master.min.js?id=7e2f562aa739963e9dffcf650df235a9",
     "/build/layouts/affiliates/master2.min.js": "/build/layouts/affiliates/master2.min.js?id=888cc773bb281a8e4d0f0172121a3dea",
     "/build/layouts/affiliates/border-anim-h.gif": "/build/layouts/affiliates/border-anim-h.gif?id=288586cd1783fb968e1ed69e031c077b",
@@ -23,9 +23,9 @@
     "/build/layouts/notificacoesInteligentes/index.min.js": "/build/layouts/notificacoesInteligentes/index.min.js?id=2cf0650e448ec2f577a6109af94885cd",
     "/build/layouts/attendance/index.min.css": "/build/layouts/attendance/index.min.css?id=f88b347d0d77412b53e0621e35e709d1",
     "/build/layouts/attendance/index.min.js": "/build/layouts/attendance/index.min.js?id=c2d632c9bcbdd022665119836ab75052",
-    "/build/layouts/chargebacks/contestations-files.min.css": "/build/layouts/chargebacks/contestations-files.min.css?id=c99b5de58bb20f57dc6dc0e614dd24ba",
+    "/build/layouts/chargebacks/contestations-files.min.css": "/build/layouts/chargebacks/contestations-files.min.css?id=5e07d9028aa1db4e9a8426a991c0a89e",
     "/build/layouts/chargebacks/contestations-files.min.js": "/build/layouts/chargebacks/contestations-files.min.js?id=16c81dd79bfa8024c79ed35048a76e0f",
-    "/build/layouts/chargebacks/contestations-index.min.css": "/build/layouts/chargebacks/contestations-index.min.css?id=b3d68d13d2d745aa143b1b55c42d2f33",
+    "/build/layouts/chargebacks/contestations-index.min.css": "/build/layouts/chargebacks/contestations-index.min.css?id=54f7d1f791176c9e2d3efb637f894fea",
     "/build/layouts/chargebacks/contestations-index.min.js": "/build/layouts/chargebacks/contestations-index.min.js?id=68fe6f4ed9bfab0b100cbcd7baf4df9e",
     "/build/layouts/chargebacks/svg/info-contestation.svg": "/build/layouts/chargebacks/svg/info-contestation.svg?id=48fa024c1780becac7b52e40acdfd1d1",
     "/build/layouts/checkouteditor/dropify.eot": "/build/layouts/checkouteditor/dropify.eot?id=c8841056ec6b01fa870c1d9c84d55a36",
@@ -110,7 +110,7 @@
     "/build/layouts/notazz/include.min.css": "/build/layouts/notazz/include.min.css?id=b3b21ae28a4dae59ec09695e9333cb1c",
     "/build/layouts/notazz/index.min.css": "/build/layouts/notazz/index.min.css?id=10625a3e49845596ba0b0834f9fcd21a",
     "/build/layouts/notazz/index.min.js": "/build/layouts/notazz/index.min.js?id=03f6dc74bc65f73b34b0a5a89df84ae7",
-    "/build/layouts/notazz/show.min.css": "/build/layouts/notazz/show.min.css?id=94f0e87fecfeea8918a2e21d68e7c7d3",
+    "/build/layouts/notazz/show.min.css": "/build/layouts/notazz/show.min.css?id=c446ddb1559d021f3498c43a52c441af",
     "/build/layouts/notazz/show.min.js": "/build/layouts/notazz/show.min.js?id=fe1349c8f4fbb373427ba50c9c60473e",
     "/build/layouts/pixels/edit.min.css": "/build/layouts/pixels/edit.min.css?id=383c3f72abefd823d5db7af054f6989f",
     "/build/layouts/products/index.min.css": "/build/layouts/products/index.min.css?id=f88bfafaeafcb4bdd64ae8037147a667",
@@ -151,7 +151,7 @@
     "/build/layouts/projectupsellconfig/previewupsellconfig.min.css": "/build/layouts/projectupsellconfig/previewupsellconfig.min.css?id=514407017127f55da51cc455df9304c9",
     "/build/layouts/reportana/index.min.css": "/build/layouts/reportana/index.min.css?id=3b0739660a8a959ce6ee832b1143f660",
     "/build/layouts/reportana/index.min.js": "/build/layouts/reportana/index.min.js?id=814096ca16e1cad456c392aa5354cbba",
-    "/build/layouts/reports/details.min.css": "/build/layouts/reports/details.min.css?id=c99b5de58bb20f57dc6dc0e614dd24ba",
+    "/build/layouts/reports/details.min.css": "/build/layouts/reports/details.min.css?id=5e07d9028aa1db4e9a8426a991c0a89e",
     "/build/layouts/reports/blockedbalance.min.css": "/build/layouts/reports/blockedbalance.min.css?id=725dc1869294277e9651d3ec774c384b",
     "/build/layouts/reports/blockedbalance.min.js": "/build/layouts/reports/blockedbalance.min.js?id=efbdc96257e2a59ecef019b049a0e44c",
     "/build/layouts/reports/coupons.min.css": "/build/layouts/reports/coupons.min.css?id=1d2a5bbd20372b95efdab21e0faaf9a2",
@@ -165,15 +165,15 @@
     "/build/layouts/reports/pending.min.js": "/build/layouts/reports/pending.min.js?id=890768c1c66f1041230f501e0eef30a6",
     "/build/layouts/reports/projections.min.css": "/build/layouts/reports/projections.min.css?id=be3bf535a9ec912d85ce7df9ead8f35b",
     "/build/layouts/reports/projections.min.js": "/build/layouts/reports/projections.min.js?id=1ac729541b8730329af5c0eb9a37dbb7",
-    "/build/layouts/sales/details.min.css": "/build/layouts/sales/details.min.css?id=c99b5de58bb20f57dc6dc0e614dd24ba",
+    "/build/layouts/sales/details.min.css": "/build/layouts/sales/details.min.css?id=5e07d9028aa1db4e9a8426a991c0a89e",
     "/build/layouts/sales/details.min.js": "/build/layouts/sales/details.min.js?id=d71fc1afba032187b3d51f5ff20b37f8",
-    "/build/layouts/sales/index.min.css": "/build/layouts/sales/index.min.css?id=60aa526b3cccf190d9d971ccbbd95133",
-    "/build/layouts/sales/index.min.js": "/build/layouts/sales/index.min.js?id=345bc72048b19ec894744a51c14be7ad",
-    "/build/layouts/salesblacklistantifraud/details.min.css": "/build/layouts/salesblacklistantifraud/details.min.css?id=c99b5de58bb20f57dc6dc0e614dd24ba",
+    "/build/layouts/sales/index.min.css": "/build/layouts/sales/index.min.css?id=1c6c354d45a73e37823e3e583d0d3c9c",
+    "/build/layouts/sales/index.min.js": "/build/layouts/sales/index.min.js?id=5084816006bf25a08ea9343db9ce680b",
+    "/build/layouts/salesblacklistantifraud/details.min.css": "/build/layouts/salesblacklistantifraud/details.min.css?id=5e07d9028aa1db4e9a8426a991c0a89e",
     "/build/layouts/salesblacklistantifraud/index.min.css": "/build/layouts/salesblacklistantifraud/index.min.css?id=e20c5e01e67646d54202613e15ac92d3",
     "/build/layouts/salesblacklistantifraud/index.min.js": "/build/layouts/salesblacklistantifraud/index.min.js?id=c21e154f1645b382e61238fd518fefe3",
-    "/build/layouts/salesrecovery/index.min.css": "/build/layouts/salesrecovery/index.min.css?id=3e4cab6fcda46bdbc9274f9bd646ee2e",
-    "/build/layouts/salesrecovery/index.min.js": "/build/layouts/salesrecovery/index.min.js?id=14ad3b7fe294179f346b57be4a77284a",
+    "/build/layouts/salesrecovery/index.min.css": "/build/layouts/salesrecovery/index.min.css?id=87cfa8bc19ea3b10692bd77734d63f0b",
+    "/build/layouts/salesrecovery/index.min.js": "/build/layouts/salesrecovery/index.min.js?id=485920d013bed01920bd4343d48a5e31",
     "/build/layouts/shipping/create.min.css": "/build/layouts/shipping/create.min.css?id=2492fd60aad2dfd7e20b5e2bc5be6c38",
     "/build/layouts/shipping/edit.min.css": "/build/layouts/shipping/edit.min.css?id=0bc342237cbe80823874e186ba3061a8",
     "/build/layouts/shopify/index.min.css": "/build/layouts/shopify/index.min.css?id=09c7a5646b12f8f25800fad0304e51e7",
@@ -212,7 +212,7 @@
     "/build/layouts/master/sirius-font.woff2": "/build/layouts/master/sirius-font.woff2?id=5a2a00359ce017c2fddd3ac992fa2b64",
     "/build/layouts/auth/auth.min.css": "/build/layouts/auth/auth.min.css?id=5623d15fe532710255ef9c0454f30c17",
     "/build/layouts/auth/auth.min.js": "/build/layouts/auth/auth.min.js?id=6a0e0eaeb98bf0158162e07395425ff8",
-    "/build/layouts/master/master.min.css": "/build/layouts/master/master.min.css?id=5887979cf48bf8ce238f13de01f79e90",
+    "/build/layouts/master/master.min.css": "/build/layouts/master/master.min.css?id=b4c47cd05d5bc01c0900b0c34c7ebf4a",
     "/build/layouts/master/plugins.min.js": "/build/layouts/master/plugins.min.js?id=4aff516a08ee56a7bd86039cfc0c08d6",
     "/build/layouts/master/production.min.js": "/build/layouts/master/production.min.js?id=33a0222bf06c2e47d5a94c8c32e5140a",
     "/build/layouts/master/master.min.js": "/build/layouts/master/master.min.js?id=888cc773bb281a8e4d0f0172121a3dea",
@@ -483,6 +483,7 @@
     "/build/global/img/onboarding/statistic.svg": "/build/global/img/onboarding/statistic.svg?id=e6ea20ddac0989c2d1ca683f066ece48",
     "/build/global/img/onboarding-account-health.png": "/build/global/img/onboarding-account-health.png?id=e5fd3b8849cd1fef5070284cb5b27458",
     "/build/global/img/onboarding-presentation.png": "/build/global/img/onboarding-presentation.png?id=c0428c6ef526ed44808bd7199972cc94",
+    "/build/global/img/order-bump-icon-new.svg": "/build/global/img/order-bump-icon-new.svg?id=07a0e5a7b61d07b148ac11dd827a8c58",
     "/build/global/img/order-bump.svg": "/build/global/img/order-bump.svg?id=1d36e3b64cea82eac495a6258d9f56e5",
     "/build/global/img/pencil-icon.svg": "/build/global/img/pencil-icon.svg?id=cafe062bbb4fff54f01c4e7a6ae297db",
     "/build/global/img/pix/icon_attachment.svg": "/build/global/img/pix/icon_attachment.svg?id=e75d6cff83068fa9075807f50be8cc50",
