--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -181,7 +181,7 @@
     "/build/layouts/smartfunnel/index.min.css": "/build/layouts/smartfunnel/index.min.css?id=9c243a1cc5bc48b17ed26944069de366",
     "/build/layouts/smartfunnel/index.min.js": "/build/layouts/smartfunnel/index.min.js?id=6c1b84c503985cf1cd717032295a1ee0",
     "/build/layouts/trackings/index.min.css": "/build/layouts/trackings/index.min.css?id=6e0acf517a0f0d25300e055c4bcc62d1",
-    "/build/layouts/trackings/index.min.js": "/build/layouts/trackings/index.min.js?id=bdfd60f43d2c40e8d1c3a0f9260d0ad0",
+    "/build/layouts/trackings/index.min.js": "/build/layouts/trackings/index.min.js?id=584fd800f03b47dc504ce897899f689c",
     "/build/layouts/trackings/svg/info-tracking.svg": "/build/layouts/trackings/svg/info-tracking.svg?id=48fa024c1780becac7b52e40acdfd1d1",
     "/build/layouts/unicodrop/index.min.css": "/build/layouts/unicodrop/index.min.css?id=9c243a1cc5bc48b17ed26944069de366",
     "/build/layouts/unicodrop/index.min.js": "/build/layouts/unicodrop/index.min.js?id=8f9f162809899f4db282295ac337f5d3",
@@ -254,6 +254,8 @@
     "/build/global/css/font/GilroyLight.woff": "/build/global/css/font/GilroyLight.woff?id=56ee867789a4441967491844915ac521",
     "/build/global/css/font/GilroyRegular.woff": "/build/global/css/font/GilroyRegular.woff?id=de9a41f57672ed8a65b4c71c127226c7",
     "/build/global/img/404.svg": "/build/global/img/404.svg?id=65c1c0c4e6ebd79a387fd21fb35a118e",
+    "/build/global/img/Shape.png:Zone.Identifier": "/build/global/img/Shape.png:Zone.Identifier?id=dce5191790621b5e424478ca69c47f55",
+    "/build/global/img/Vector.png:Zone.Identifier": "/build/global/img/Vector.png:Zone.Identifier?id=dce5191790621b5e424478ca69c47f55",
     "/build/global/img/active_campaign.png": "/build/global/img/active_campaign.png?id=0a0d49952f77e2f5f043c37a4a1bc244",
     "/build/global/img/afiliados.svg": "/build/global/img/afiliados.svg?id=c54ec1e8ab250ffff160058ae499684e",
     "/build/global/img/alert-demo-left.png": "/build/global/img/alert-demo-left.png?id=041d04e85cb98cc647cd974af8403e1e",
